# serializer version: 1
# name: test_binary_sensor_states[platforms0-True-anna_heatpump_heating][binary_sensor.opentherm_compressor_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.opentherm_compressor_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Compressor state',
    'platform': 'plugwise',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'compressor_state',
    'unique_id': '1cbf783bb11e4a7c8a6843dee3a86927-compressor_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_states[platforms0-True-anna_heatpump_heating][binary_sensor.opentherm_compressor_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'OpenTherm Compressor state',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.opentherm_compressor_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor_states[platforms0-True-anna_heatpump_heating][binary_sensor.opentherm_cooling-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.opentherm_cooling',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Cooling',
    'platform': 'plugwise',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cooling_state',
    'unique_id': '1cbf783bb11e4a7c8a6843dee3a86927-cooling_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_states[platforms0-True-anna_heatpump_heating][binary_sensor.opentherm_cooling-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'OpenTherm Cooling',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.opentherm_cooling',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor_states[platforms0-True-anna_heatpump_heating][binary_sensor.opentherm_cooling_enabled-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.opentherm_cooling_enabled',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Cooling enabled',
    'platform': 'plugwise',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'cooling_enabled',
    'unique_id': '1cbf783bb11e4a7c8a6843dee3a86927-cooling_enabled',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_states[platforms0-True-anna_heatpump_heating][binary_sensor.opentherm_cooling_enabled-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'OpenTherm Cooling enabled',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.opentherm_cooling_enabled',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor_states[platforms0-True-anna_heatpump_heating][binary_sensor.opentherm_dhw_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.opentherm_dhw_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'DHW state',
    'platform': 'plugwise',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dhw_state',
    'unique_id': '1cbf783bb11e4a7c8a6843dee3a86927-dhw_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_states[platforms0-True-anna_heatpump_heating][binary_sensor.opentherm_dhw_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'OpenTherm DHW state',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.opentherm_dhw_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor_states[platforms0-True-anna_heatpump_heating][binary_sensor.opentherm_flame_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.opentherm_flame_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Flame state',
    'platform': 'plugwise',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'flame_state',
    'unique_id': '1cbf783bb11e4a7c8a6843dee3a86927-flame_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_states[platforms0-True-anna_heatpump_heating][binary_sensor.opentherm_flame_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'OpenTherm Flame state',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.opentherm_flame_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor_states[platforms0-True-anna_heatpump_heating][binary_sensor.opentherm_heating-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.opentherm_heating',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Heating',
    'platform': 'plugwise',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heating_state',
    'unique_id': '1cbf783bb11e4a7c8a6843dee3a86927-heating_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_states[platforms0-True-anna_heatpump_heating][binary_sensor.opentherm_heating-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'OpenTherm Heating',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.opentherm_heating',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensor_states[platforms0-True-anna_heatpump_heating][binary_sensor.opentherm_secondary_boiler_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.opentherm_secondary_boiler_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Secondary boiler state',
    'platform': 'plugwise',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'secondary_boiler_state',
    'unique_id': '1cbf783bb11e4a7c8a6843dee3a86927-secondary_boiler_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_states[platforms0-True-anna_heatpump_heating][binary_sensor.opentherm_secondary_boiler_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'OpenTherm Secondary boiler state',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.opentherm_secondary_boiler_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensor_states[platforms0-True-anna_heatpump_heating][binary_sensor.smile_anna_plugwise_notification-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.smile_anna_plugwise_notification',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Plugwise notification',
    'platform': 'plugwise',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'plugwise_notification',
    'unique_id': '015ae9ea3f964e668e490fa39da3870b-plugwise_notification',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor_states[platforms0-True-anna_heatpump_heating][binary_sensor.smile_anna_plugwise_notification-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Smile Anna Plugwise notification',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.smile_anna_plugwise_notification',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
